--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <nav class="hide">
         <img id="img-menu-close"  src="./assets/images/icon-menu-close.svg" alt="x icon for closing menu"/>
         <ul class="list-menu">
-          <li>Home</li>
-          <li>New</li>
-          <li>Popular</li>
-          <li>Trending</li>
-          <li>Categories</li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#new">New</a></li>
+          <li><a href="#popular">Popular</a></li>
+          <li><a href="#trending">Trending</a></li>
+          <li><a href="#categories">Categories</a></li>
         </ul>
       </nav>
     </div>
